--- a/common/data/translation/sixteen/en.json
+++ b/common/data/translation/sixteen/en.json
@@ -1,20 +1,20 @@
 {
 	"headerText": "Change Language",
 	"welcome": "Welcome",
-	"title": "Coming Soon 16",
+	"title": "Opulence - Generating wealth through building DeFi infrustructure.",
 	"logo": "Logo",
 	"ticker": "Our website in under construction",
-	"mainMessage": "Something Big update is coming by our team. Wait! We are launching soon with amazing updates!",
-	"description": "Lorem ipsum dolor sit amet consectetur adipisicing elit sed eiu sit amet consectetur adipisicing",
-	"notifyText": "Notify Me Update",
-	"buttonText": "Subscribe Email ",
-	"placeholder": "Enter email address",
+	"mainMessage": "Generating wealth through building DeFi infrustructure.",
+	"description": "Subscribe to get notified about our launch.",
+	"notifyText": "Notify me via Email",
+	"buttonText": "Subscribe via Email ",
+	"placeholder": "Enter your email address",
 	"not_found": "404 - Page Not Found",
-	"copyrightText": "Copyright 2021 by RedQ, Inc. All rights reserved",
+	"copyrightText": "Copyright 2021 by Opulence, Inc. All rights reserved",
 	"languageText": "Language ",
 	"languageName": "English",
-	"successMsg": "Thank you for the submission",
-	"errorMsg": "Oops!!Something went wrong.",
+	"successMsg": "Thank you for subscribing. We will update you as soon as the project is live.",
+	"errorMsg": "Oops. Something went wrong. Please try again",
 	"days": "days",
 	"hours": "hours",
 	"minutes": "minutes",
